--- a/style/main.css
+++ b/style/main.css
@@ -4,6 +4,24 @@ header{
     background: linear-gradient(168deg, rgba(5,0,93,0.938813025210084) 13%, rgba(21,21,221,1) 52%, rgba(100,229,255,0.865983893557423) 93%);
     color: white;
 }
+.idioma{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-right: 20px;
+}
+.language{
+    width: 60px;
+    height: 30px;
+    border: none;
+    margin-left: 10px;
+    margin-top: 5px;
+}
+.bandeira{
+    width: 50px;
+    height: 30px;
+    border: none;
+}
 .name{
     height: 100%;
     display: flex;
@@ -12,7 +30,6 @@ header{
     justify-content:space-evenly;
 }
 .container{
-    display: grid;
     background-color:  rgb(231, 231, 231);
     margin-top: 50px;
 }
@@ -28,7 +45,8 @@ header{
 		"main-esq main1 main1 main1 main-dir"
 		"main-esq main2 main2 main2 main-dir"
         "main-esq main3 main3 main3 main-dir"
-		;
+        ;
+    margin-bottom: 20px;
 }
 /*Main1*/
 .main1{
@@ -40,6 +58,7 @@ header{
         "about about info"
         ;
         grid-gap: 20px;
+    
 }
 .about{
     grid-area: about;
@@ -67,7 +86,7 @@ header{
     border: 1px solid ;
     background-image: linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
     background-size: 0.8rem 1rem;
-
+    
 }
 .foto{
     margin-top: 30px;
@@ -84,7 +103,8 @@ header{
     max-width: fit-content;
     width: auto;
     margin-top: 10px;
-    margin-left: 50px;
+    margin-left: 30px;
+    margin-right: 10px;
     background-color: rgb(231, 231, 231);
     background-image: linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
     background-size: 0.8rem 1rem;
@@ -180,6 +200,7 @@ header{
     font-size: 20px;
     margin-top: 25px;
 }
+
 .ano{
     font-size: 24px;
     color: dimgray;
@@ -199,4 +220,296 @@ header{
     color: white;
     font-size: 18px;
     font-style: inherit;
+}
+
+/*Responsive*/
+@media only screen and (max-width: 361px){
+    .name{
+        text-align: center;
+    }
+    .name h1{
+        font-size: 28px;
+    }
+    .main1 {
+        display: grid;
+        height: 95vh;
+        background-color: rgb(231, 231, 231);
+        grid-area: main1;
+        grid-template-areas: 
+        "info" 
+        "about";
+        margin-bottom: 700px;
+        grid-gap: 20px;
+    }
+    .main2 {
+        margin-top: 20px;
+        display: grid;
+        height: 115vh;
+        background-color: rgb(231, 231, 231);
+        grid-area: main2;
+        grid-template-areas: 
+        "skill" 
+        "education";
+        grid-gap: 20px;
+        margin-bottom: 210px;
+    }
+    .main3{
+        margin-top: 269px;
+        display: grid;
+        height: 95vh;
+        background-color: rgb(231, 231, 231);
+        grid-area: main3;
+        grid-gap: 20px;
+        border: 1px solid;
+        flex-wrap: wrap;
+        grid-template-areas: "work";
+    }
+    .workExp{
+        grid-area: work;
+    }
+}
+@media only screen and (min-width: 362px) and (max-width: 380px) {
+    .name{
+        text-align: center;
+    }
+    .name h1{
+        font-size: 28px;
+    }
+    .main1 {
+        display: grid;
+        height: 100vh;
+        background-color: rgb(231, 231, 231);
+        grid-area: main1;
+        grid-template-areas: 
+        "info" 
+        "about";
+        margin-bottom: 580px;
+        grid-gap: 20px;
+    }
+    .main2 {
+        margin-top: 20px;
+        display: grid;
+        height: 105vh;
+        background-color: rgb(231, 231, 231);
+        grid-area: main2;
+        grid-template-areas: 
+        "skill" 
+        "education";
+        grid-gap: 20px;
+        margin-bottom: 200px;
+    }
+    .main3{
+    margin-top: 269px;
+    display: grid;
+    height: 95vh;
+    background-color: rgb(231, 231, 231);
+    grid-area: main3;
+    grid-gap: 20px;
+    border: 1px solid;
+    flex-wrap: wrap;
+    grid-template-areas: "work";
+    }
+    .workExp{
+        grid-area: work;
+    }
+  .titles {
+    margin-left: 30px;
+}
+}
+@media only screen and (min-width: 381px) and (max-width: 400px) {
+    .name{
+        text-align: center;
+    }
+    
+    .container-main{
+        display: grid;
+        background-color:  rgb(231, 231, 231);
+        grid-area: main-dir;
+        grid-template-areas:
+            "main1"
+            "main2"
+            "main3"
+            ;
+        margin-bottom: 20px;
+    }
+    .main1 {
+        display: grid;
+        height: 85vh;
+        background-color: rgb(231, 231, 231);
+        grid-area: main1;
+        grid-template-areas: 
+        "info" 
+        "about";
+        margin-bottom: 560px;
+        grid-gap: 20px;
+    }
+    .main2 {
+        margin-top: 20px;
+        display: grid;
+        height: 85vh;
+        background-color: rgb(231, 231, 231);
+        grid-area: main2;
+        grid-template-areas: 
+        "skill" 
+        "education";
+        grid-gap: 20px;
+        margin-bottom: 200px;
+    }
+    .main3{
+    margin-top: 269px;
+    display: grid;
+    height: 70vh;
+    background-color: rgb(231, 231, 231);
+    grid-area: main3;
+    grid-gap: 20px;
+    border: 1px solid;
+    flex-wrap: wrap;
+    grid-template-areas: "work";
+    }
+    .workExp{
+        grid-area: work;
+    }
+  }
+  .titles {
+    margin-left: 30px;
+}
+
+@media only screen and (min-width: 401px) and (max-width: 760px) {
+    .name{
+        text-align: center;
+    }
+    .name h1{
+        font-size: 28px;
+    }
+    .container-main{
+        display: grid;
+        background-color:  rgb(231, 231, 231);
+        grid-area: main-dir;
+        grid-template-areas:
+            "main1"
+            "main2"
+            "main3"
+            ;
+        margin-bottom: 20px;
+    }
+    .main1 {
+        display: grid;
+        height: 90vh;
+        background-color: rgb(231, 231, 231);
+        grid-area: main1;
+        grid-template-areas: 
+        "info" 
+        "about";
+        margin-bottom: 500px;
+        grid-gap: 20px;
+    }
+    .main2 {
+        margin-top: 20px;
+        display: grid;
+        height: 90vh;
+        background-color: rgb(231, 231, 231);
+        grid-area: main2;
+        grid-template-areas: 
+        "skill" 
+        "education";
+        grid-gap: 20px;
+        margin-bottom: 450px;
+    }
+    .main3{
+    display: grid;
+    height: 70vh;
+    background-color: rgb(231, 231, 231);
+    grid-area: main3;
+    grid-gap: 20px;
+    border: 1px solid;
+    flex-wrap: wrap;
+    grid-template-areas: "work";
+    }
+    .workExp{
+        grid-area: work;
+    }
+  }
+  .titles {
+    margin-left: 30px;
+}
+
+@media only screen and (min-width: 761px) and (max-width: 960px) {
+    .main1 {
+        display: grid;
+        height: 85vh;
+        background-color: rgb(231, 231, 231);
+        grid-area: main1;
+        grid-template-areas: 
+        "info" 
+        "about";
+        margin-bottom: 140px;
+        grid-gap: 20px;
+    }
+    .main2 {
+        margin-top: 20px;
+        display: grid;
+        height: 85vh;
+        background-color: rgb(231, 231, 231);
+        grid-area: main2;
+        grid-template-areas: 
+        "skill" 
+        "education";
+        grid-gap: 20px;
+        margin-bottom: 90px;
+    }
+    .main3{
+    margin-top: 180px;
+    display: grid;
+    height: 70vh;
+    background-color: rgb(231, 231, 231);
+    grid-area: main3;
+    grid-gap: 20px;
+    border: 1px solid;
+    flex-wrap: wrap;
+    grid-template-areas: "work";
+    }
+    .workExp{
+        grid-area: work;
+    }
+  .titles {
+    margin-left: 30px;
+    }
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1280px) {
+    .main1{
+        display: grid;
+        height: 85vh;
+        background-color:  rgb(231, 231, 231);
+        grid-area: main1;
+        grid-template-areas:
+            "about about info"
+            ;
+            grid-gap: 20px;
+        
+    }
+    .main2{
+        margin-top: 20px;
+        display: grid;
+        height: 85vh;
+        background-color:  rgb(231, 231, 231);
+        grid-area: main2;
+        grid-template-areas:
+        "skill education education"
+        ;
+        grid-gap: 20px;
+    
+    }
+    .main3{
+        margin: 20px 0;
+        display: grid;
+        height: 70vh;
+        background-color: rgb(231, 231, 231);
+        grid-area: main3;
+        grid-gap: 20px;
+        border: 1px solid ;
+    }
+  .titles {
+    margin-left: 30px;
+    }
 }
