--- a/style/main.css
+++ b/style/main.css
@@ -220,6 +220,7 @@ header{
     color: white;
     font-size: 18px;
     font-style: inherit;
+    text-align: center;
 }
 
 /*Responsive*/
@@ -283,7 +284,7 @@ header{
         grid-template-areas: 
         "info" 
         "about";
-        margin-bottom: 440px;
+        margin-bottom: 540px;
         grid-gap: 20px;
     }
     .main2 {
@@ -296,7 +297,7 @@ header{
         "skill" 
         "education";
         grid-gap: 20px;
-        margin-bottom: 200px;
+        margin-bottom: 300px;
     }
     .main3{
     margin-top: 269px;
@@ -314,7 +315,10 @@ header{
     }
   .titles {
     margin-left: 30px;
-}
+    }
+    #footer{
+        text-align: center;
+    }
 }
 @media only screen and (min-width: 381px) and (max-width: 400px){
     .name{
