--- a/style/main.css
+++ b/style/main.css
@@ -278,29 +278,29 @@ header{
     }
     .main1 {
         display: grid;
-        height: 120vh;
+        height: 190vh;
         background-color: rgb(231, 231, 231);
         grid-area: main1;
         grid-template-areas: 
         "info" 
         "about";
-        margin-bottom: 540px;
+        margin-bottom: 30px;
         grid-gap: 20px;
     }
     .main2 {
-        margin-top: 20px;
+        margin-top: 0px;
         display: grid;
-        height: 120vh;
+        height: 180vh;
         background-color: rgb(231, 231, 231);
         grid-area: main2;
         grid-template-areas: 
         "skill" 
         "education";
         grid-gap: 20px;
-        margin-bottom: 300px;
+        margin-bottom: 10px;
     }
     .main3{
-    margin-top: 269px;
+    margin-top: 10px;
     display: grid;
     height: 90vh;
     background-color: rgb(231, 231, 231);
@@ -398,26 +398,25 @@ header{
     }
     .main1 {
         display: grid;
-        height: 90vh;
+        height: 120vh;
         background-color: rgb(231, 231, 231);
         grid-area: main1;
         grid-template-areas: 
         "info" 
         "about";
-        margin-bottom: 500px;
+        margin-bottom: 10px;
         grid-gap: 20px;
     }
     .main2 {
-        margin-top: 20px;
         display: grid;
-        height: 90vh;
+        height: 130vh;
         background-color: rgb(231, 231, 231);
         grid-area: main2;
         grid-template-areas: 
         "skill" 
         "education";
         grid-gap: 20px;
-        margin-bottom: 450px;
+        margin-bottom: 10px;
     }
     .main3{
     display: grid;
@@ -440,7 +439,52 @@ header{
 @media only screen and (min-width: 761px) and (max-width: 960px) {
     .main1 {
         display: grid;
-        height: 85vh;
+        height: 130vh;
+        background-color: rgb(231, 231, 231);
+        grid-area: main1;
+        grid-template-areas: 
+        "info" 
+        "about";
+        margin-bottom: 10px;
+        grid-gap: 20px;
+    }
+    .main2 {
+        margin-top: 90px;
+        display: grid;
+        height: 100vh;
+        background-color: rgb(231, 231, 231);
+        grid-area: main2;
+        grid-template-areas: 
+        "skill" 
+        "education";
+        grid-gap: 20px;
+        margin-bottom: 90px;
+    }
+    .main3{
+    margin-top: 180px;
+    display: grid;
+    height: 70vh;
+    background-color: rgb(231, 231, 231);
+    grid-area: main3;
+    grid-gap: 20px;
+    border: 1px solid;
+    flex-wrap: wrap;
+    grid-template-areas: "work";
+    }
+    .workExp{
+        grid-area: work;
+    }
+  .titles {
+    margin-left: 30px;
+    }
+}
+
+
+
+@media only screen and (min-width: 961px) and (max-width: 1024px) {
+    .main1 {
+        display: grid;
+        height: 100vh;
         background-color: rgb(231, 231, 231);
         grid-area: main1;
         grid-template-areas: 
@@ -452,7 +496,7 @@ header{
     .main2 {
         margin-top: 20px;
         display: grid;
-        height: 85vh;
+        height: 100vh;
         background-color: rgb(231, 231, 231);
         grid-area: main2;
         grid-template-areas: 
